# Cobalt

./: .gitignore  CMakeLists.txt  cobalt_osx
cmake/: cobalt.cmake  cobalt_dependencies.cmake  cobalt_options.cmake  cobalt_osx.cmake  cobalt_windows.cmake  emscripten.cmake
examples/: CMakeLists.txt
examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
examples/TrivialApplication/: CMakeLists.txt  TrivialApplication.cpp
ext/emsdk_portable/: emsdk_set_env.sh
ext/emsdk_portable/clang/e1.27.0_64bit/: clang-tblgen  count  llvm-ar  llvm-as  llvm-bcanalyzer  llvm-config  llvm-cov  llvm-diff  llvm-dis  llvm-dwarfdump  llvm-extract  llvm-link  llvm-lit  llvm-mc  llvm-mcmarkup  llvm-nm  llvm-objdump  llvm-prof  llvm-ranlib  llvm-readobj  llvm-rtdyld  llvm-size  llvm-stress  llvm-symbolizer  llvm-tblgen  macho-dump  not  obj2yaml  yaml-bench  yaml2obj
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LLVMBuild.cmake  Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/cmake/modules/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/docs/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/include/llvm/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/Analysis/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/AsmParser/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/Bitcode/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/CodeGen/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/DebugInfo/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/ExecutionEngine/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/Fuzzer/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/IR/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/IRReader/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/LTO/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/LineEditor/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/Linker/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/MC/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/Object/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/Option/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/Passes/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/ProfileData/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/Support/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/TableGen/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/lib/Transforms/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/projects/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/bugpoint/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/bugpoint-passes/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/clang/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/dsymutil/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/gold/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llc/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/lli/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-ar/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-as/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-bcanalyzer/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-c-test/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-config/: BuildVariables.inc  Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-cov/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-cxxdump/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-diff/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-dis/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-dwarfdump/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-extract/: Makefile  cmake_install.cmake
ext/emsdk_portable/clang/tag-e1.34.1/build_tag-e1.34.1_64/tools/llvm-go/: Makefile  cmake_install.cmake
ext/emsdk_portable/emscripten/tag-1.34.1_64bit_optimizer/: CMakeCache.txt  Makefile  cmake_install.cmake  optimizer
include/Core/: Log.hpp
include/Platform/: Application.hpp
src/Core/: CMakeLists.txt  Log.cpp
src/Graphics/: CMakeLists.txt
src/Platform/: Application.cpp  CMakeLists.txt
(+230 files in other folders)
